--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <label for="isbn">ISBN#</label>
         <input type="text" id="isbn" class="u-full-width">
       </div>
-      <div><input type="submit" value="Submit" class="u-full-width"></div>
+      <div><input type="submit" value="submit" class="u-full-width"></div>
     </form>
     <table class="u-full-width">
       <thead>
@@ -52,6 +52,6 @@
       <tbody id="book-list"></tbody>
     </table>
   </div>
-  <script src="app.js"></script>
+  <script src="appes6.js"></script>
 </body>
 </html>
